src/sass/mixins/menu-block.scss
.menu {
	padding: 0px 0px 100px;
	position: relative;
	@include tablets {
		padding-bottom: 70px;
	}
	@include phones {
		padding-bottom: 40px;
	}
	&-wrapper {
		position: relative;
		overflow: hidden;
		&_padding {
			padding-top: 89px;
			@include laptops {
				padding-top: 70px;
			}
			@include tablets {
				padding-top: 50px;
			}
			@include phones {
				padding-top: 30px;
			}
		}
	}
	&__title {
		text-align: center;
		margin-bottom: 30px;
	}
	&__list {
		@extend %list;
		display: flex;
		justify-content: center;
		align-items: center;
		margin-bottom: 40px;
		@include phones {
			margin-left: 24px;
			flex-wrap: wrap;
		}
		&:after {
			content: "";
			position: absolute;
			left: -5000px;
			width: 10000px;
			margin-top: 48px;
			height: 1px;
			background-color: red;
			background: url("./img/menu/border-dashed.png");
			background-repeat: repeat-x;
			z-index: -1;
			@include phones {
				margin-top: 75px;
			}
		}
	}
	&__all {
		background: url("./img/menu/icon-all-orange.png") no-repeat;
	}
	&__lunch {
		background: url("./img/menu/icon-lunch-orange.png") no-repeat;
	}
	&__breakfast {
		background: url("./img/menu/icon-breakfast-orange.png") no-repeat;
	}
	&__snacks {
		background: url("./img/menu/icon-snacks-orange.png") no-repeat;
	}
	&__pizza {
		background: url("./img/menu/icon-pizza-orange.png") no-repeat;
	}
	&__soups {
		background: url("./img/menu/icon-soups-orange.png") no-repeat;
	}
	&__dinner {
		background: url("./img/menu/icon-dinner-orange.png") no-repeat;
	}
	&__link {
		align-items: center;
		display: flex;
		flex-direction: column;
		&-text {
			font-size: 20px;
			font-family: "PlayfairDisplay";
			color: $black;
			transition: 300ms;
			&_active {
				color: $pink;
			}
			@include laptops {
				font-size: 18px;
			}
			@include tablets {
				font-size: 16px;
			}
		}
	}
	&__item {
		justify-content: center;
		margin-right: 53.5px;
		@include tablets {
			margin-right: 20px;
		}
		&:last-child {
			margin-right: 0px;
		}
		&:hover .menu__link-text {
			color: $orange;
		}
		&-all {
			&:hover .menu__all, &:focus .menu__all {
				background: url("./img/menu/icon-all-pink.png") no-repeat;
			}
		}
		&-lunch {
			&:hover .menu__lunch {
				background: url("./img/menu/icon-lunch-pink.png") no-repeat;
			}
		}
		&-breakfast {
			&:hover .menu__breakfast {
				background: url("./img/menu/icon-breakfast-pink.png") no-repeat;
			}
		}
		&-snacks {
			&:hover .menu__snacks {
				background: url("./img/menu/icon-snacks-pink.png") no-repeat;
			}
		}
		&-pizza {
			&:hover .menu__pizza {
				background: url("./img/menu/icon-pizza-pink.png") no-repeat;
			}
		}
		&-soups {
			&:hover .menu__soups {
				background: url("./img/menu/icon-soups-pink.png") no-repeat;
			}
		}
		&-dinner {
			&:hover .menu__dinner {
				background: url("./img/menu/icon-dinner-pink.png") no-repeat;
			}
		}
	}
	&__icon {
		width: 25px;
		height: 28px;
		transition: 300ms;
	}
	&__button {
		margin: 0 auto;
	}
	&-items {
		&__link {
			display: flex;
			border-bottom: 1px solid #eee;
			align-items: center;
			justify-content: space-between;
			padding: 30px 23px 12px 0;
			@include laptops {
				padding: 30px 0px 12px 0px;
			}
			@include tablets {
				width: 100%;
				float: none;
			}
		}
		&__item {
			margin-right: 42px;
			width: calc(50% - 30px);
			display: block;
			float: left;
			&:nth-child(even) {
				margin-right: 0px;
			}
			@include tablets {
				width: 100%;
			}
		}
		&__title {
			font-size: 16px;
			color: $black;
			font-weight: bold;
			text-transform: uppercase;
			@include tablets {
				font-size: 15px;
			}
			@include phones {
				font-size: 14px;
			}
		}
		&__text {
			color: #5c6369;
			font-weight: 300;
			letter-spacing: -0.2px;
			@include laptops {
				font-size: 13px;
			}
			@include tablets {
				font-size: 12px;
			}
			@include phones {
				font-size: 11px;
			}
		}
		&__price {
			font-size: 26px;
			font-family: "Playfair Display";
			color: $orange;
			text-transform: uppercase;
			margin-top: -14px;
			@include laptops {
				font-size: 22px;
				margin-top: 0px;
			}
			@include tablets {
				font-size: 20px;
			}
			@include phones {
				font-size: 17.5px;
			}
			&-sign {
				display: inline-block;
				font-size: 25px;
				vertical-align: middle;
				margin-top: -10px;
				@include laptops {
					font-size: 18px;
				}
				@include tablets {
					font-size: 16px;
				}
				@include phones {
					font-size: 14.5px;
				}
			}
		}
		&__list {
			@extend %list;
			@extend %clearfix;
			margin-bottom: 35px;
		}
	}
}

